@@ -183,6 +183,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 4876) Add __NEWSECTIONLINK__ magic word to force the "new section" link/tab to
   show up on specific pages on demand
 * Bidi-aid on list pages
+* (bug 5782) Allow entries in the bad image list to use canonical namespace names
 
 == Compatibility ==
 
